using router, added our own html to homepage object in router-view

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <!-- NAVLINKS -->
-          <!-- <a href="#/about" class="nav-link">About</a> -->
+          <a href="#/about" class="nav-link">About</a>
         </div>
       </div>
       <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
@@ -40,7 +40,22 @@
 
   <!-- SECTION -->
   <main>
-      <!-- <section id="router-view"></section> -->
+    <!-- STUB home page -->
+    <!-- <div class="container">
+      <section class="row">
+        <div class="col-12">
+          <div class="text-center">
+            <h1>Welcome to Gregslist</h1>
+            <h2>Choose a listing type</h2>
+            <div>
+              <button class="btn btn-dark">
+                Cars <i class="mdi mdi-car-convertible"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div> -->
   </main>
 
   <!-- SECTION -->
